# chromatic-encoding

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  _torchmodel.py  colorize.sh  common.sh  criteo-submod-eval.ipynb  environment.yaml  field_aware_colorize.sh  hashing_trick.py  lgbm.py  ray_pytorch_experiments.py  requirements.txt  run_torchfm.py  setup.py  splits.sh  svmlight_loader_install.py  svms.ipynb  synth.ipynb  synthetic.ipynb  turing-gen.ipynb  urls-eval.ipynb  urls.ipynb  vw.sh  vw_logspace_experiments.sh  vw_split_experiments.sh  xgb.py  xgb.sh  xgb_eval.py
clean/: bins.py  bz2extract.sh  cards.sh  counts.sh  datasets_to_compressed.sh  digitize.sh  lines.sh  maketoy.sh  process_binary_dataset.sh  process_mixed_dataset.sh  recode_dataset.sh  run.sh  valid_svm.sh  values.sh
crank/: Cargo.toml
crank/examples/: graph.rs  greedy.rs  recode.rs  svm2bins.rs
crank/src/: atomic_rw.rs  color.rs  graph.rs  graphio.rs  lib.rs  scanner.rs  simsvm.rs  svmlight.rs
csl/: Cargo.toml
csl/src/: adjacency.rs  categorical.rs  edges.rs  feature.rs  identity.rs  lib.rs  main.rs  submodular.rs  svm2bins.rs  svm_scanner.rs  unsafe_hasher.rs
csl/src/categorical/: frequency_truncation.rs  identity.rs  sketch.rs  submodular_expansion.rs  target_encode.rs
distributed/: ce-cluster.yaml  run.sh
encode/: ft.awk  ht.awk  max.awk  mkhash.awk  run.sh
graph/: run.sh
nn/: run.py  run.sh  utils.py
pycrank/: embed.py  layer.py  opt.py  sparse_adam.py  utils.py  wd.py
raw/: datasets_to_urls.sh  run.sh
viz/: run.ipynb
wabbit/: logloss.py  run.sh  vw.sh
