[package]
name = "crank"
version = "0.1.0"
authors = ["Vladimir Feinberg <vladimir.feinberg@gmail.com>"]
edition = "2018"

[[example]]
name = "recode"
path = "examples/recode.rs"

[dependencies]
rayon = "1.3"
itertools = "0.9"
bstr = "0.2"
sprs = "0.9"
ordered-float = "1.0"
indicatif = "0.15"
rand = "0.7"
rand_pcg = "0.2"

[dev-dependencies]
structopt = "0.3"
serde_json = "1.0"
byte-slice-cast = "1.0"