[package]
name = "csl"
version = "0.1.0"
authors = ["Vladimir Feinberg <vladimir.feinberg@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3"
memmap = "0.7"
rayon = "1.3"
itertools = "0.9"
bstr = "0.2"
fasthash = "0.4"
ordered-float = "1.0"
rand = "0.7"
hashbrown = "0.7"
byte-slice-cast = "0.3"

[profile.release]
debug = true # Include debug symbols.
lto = true

[[bin]]
name = "svm2bins"
path = "src/svm2bins.rs"